# bmmc-perms-gpu

./: README.md  benchmark.cu  cabal.project  kernels.cabal
exe/: Main.hs
src/: Bmmc.hs  KernelGen.hs  Perm.hs
tests/: BmmcTests.hs  ParmMatrixTests.hs  PermTests.hs  Test.hs
